# tesla-finder-ae

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.serena/: project.yml
src/tesla_finder_ae/: __init__.py  html_generator.py  main.py  nodes.py  observability.py
src/tesla_finder_ae/templates/: report.html.j2
