[project]
name = "tesla-finder-ae"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Batista Harahap", email = "batista@bango29.com" }
]
dependencies = [
    "typer>=0.17.4",
    "pydantic-ai[mcp]>=1.0.9",
    "logfire>=4.8.0",
    "pydantic-graph>=1.0.9",
    "jinja2>=3.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tsf = "tesla_finder_ae.main:app"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tesla_finder_ae"]
